# steer_lib

./: .gitignore  CMakeLists.txt  LICENCE  Makefile  Makefile.include  README  ReG_Steer_Config.h.in  RealityGridConfig.cmake.in  RealityGridMacros.cmake.in  RelNotes  TODO  UseRealityGrid.cmake.in  chlib  reg-config.in  reg_steer_configure.csh  reg_steer_configure.sh  reg_steer_lib.dsp
CMake/: ExamplesCommonBlock.cmake  ExamplesCommonBlockMPI.cmake  FindM4.cmake  FindMPIF.cmake  FindSockets.cmake  FindXDR.cmake  FindXXD.cmake  GenerateRealityGridConfig.cmake  GenerateRealityGridModuleList.cmake  JavaCompileOverride.cmake  Modules.cmake  ModulesMacro.cmake  PlatformFeatures.cmake  PlatformFeaturesSockets.cmake
CMake/fortran-c-abi/: Fortran-C-ABI.cmake  NameMangling.cmake  StringPassing.cmake
CMake/fortran-c-abi/mangle/: CMakeLists.txt  c-mangle.c  f-mangle.f
CMake/fortran-c-abi/strings/: CMakeLists.txt  c-strings.c  f-strings.f
CMake/platform/: All.cmake  Cygwin.cmake  Darwin.cmake  Windows.cmake  all.cmake
SGS/: Makefile  SGS.pm  SGS.wsdl  SGS_daemon.pl
SGS/utils/: SGS2wsdl.pl  destroy_SGS.pl  generate_c_from_wsdl.csh  str_client.pl  str_non_wsdl_client.pl
doc/: CMakeLists.txt  Environment_variables.txt  ReG_Steering_Grid_Service.doc  ReG_Steering_Web_Service.tex  ReG_emitdata_walkthrough.doc  doxyfile.in  steer_ws_security.eps
docs/: Dependencies.txt  Doxyfile  Environment_variables.txt  ReG_Steering_Grid_Service.doc  ReG_Steering_Web_Service.tex  ReG_steering_api.doc  ReG_steering_v0.5.doc  ReG_steering_walkthrough_file.doc  ReG_steering_walkthrough_socket.doc  release_notes_1.0Beta.txt
examples/: CMakeLists.txt  ReG_Examples_Config.h.in
examples/mini_app/: CMakeLists.txt  Makefile  mini_app.c
examples/mini_app_f90/: CMakeLists.txt  Makefile  mini_app2.f90
examples/mini_app_f90_parallel/: CMakeLists.txt  Makefile  mini_app_para.f90
examples/mini_steerer/: CMakeLists.txt  Makefile  mini_steerer.c  security.conf
examples/simple/: CMakeLists.txt  Makefile  simple.c
examples/sink/: CMakeLists.txt  Makefile  sink.c
expat/: Makefile
expat/gennmtab/: gennmtab
expat/sample/: Makefile  elements.c  reg_expt.c  status_info_0  status_info_1
include/: Base64.h  CMakeLists.txt  ReG_Steer_Appside.h  ReG_Steer_Appside_Direct.h  ReG_Steer_Appside_File.h  ReG_Steer_Appside_Globus.h  ReG_Steer_Appside_IOProxy.h  ReG_Steer_Appside_Soap.h  ReG_Steer_Appside_Sockets.h  ReG_Steer_Appside_WSRF.h  ReG_Steer_Appside_internal.h  ReG_Steer_Browser.h  ReG_Steer_Common.h  ReG_Steer_Dynamic_Loader.h  ReG_Steer_Files_Common.h  ReG_Steer_Globus_io.h  ReG_Steer_Logging.h  ReG_Steer_Proxy_utils.h  ReG_Steer_Samples_Transport_API.h  ReG_Steer_Samples_Transport_Proxy.h  ReG_Steer_Samples_Transport_Sockets.h  ReG_Steer_Sockets_Common.h  ReG_Steer_Steering_Transport_API.h  ReG_Steer_Steering_Transport_Files.h  ReG_Steer_Steering_Transport_Sockets.h  ReG_Steer_Steering_Transport_WSRF.h  ReG_Steer_Steerside.h  ReG_Steer_Steerside_Direct.h  ReG_Steer_Steerside_Globus.h  ReG_Steer_Steerside_Soap.h  ReG_Steer_Steerside_WSRF.h  ReG_Steer_Steerside_internal.h  ReG_Steer_Utils.h  ReG_Steer_Utils_WSRF.h  ReG_Steer_WSRF_Utilities.h  ReG_Steer_XML.h  ReG_Steer_types.h  mainpage_doc.h  reg_steer_f.inc  reg_steer_f77.inc  (+10 more)
include/win32/: ReG_Steer_Win32.h
ioProxy/: CMakeLists.txt  HybridSwitch.java  HybridThread.java  README  manifest.txt  reg-proxy.in
lib32/: .keep_me
make/: Makefile.ALTIX  Makefile.ALTIX-GCC  Makefile.DARWIN  Makefile.LINUX  Makefile.LINUX-Intel  Makefile.LINUX-Pgi  Makefile.LINUX64  Makefile.SGI  Makefile.SGI64  Makefile.SP2MPI  Makefile.SUN4  Makefile.TRU64
mini_app/: Makefile  make_all  mini_app.c
mini_app_f90/: Makefile  mini_app2.f90
mini_steerer/: mini_steerer.c
src/: Base64.c  CMakeLists.txt  Makefile  Makefile.ff  Makefile.ffd  Makefile.fs  Makefile.fsd  Makefile.sf  Makefile.sfd  Makefile.shared  Makefile.ss  Makefile.ssd  ReG_Steer_Appside.c  ReG_Steer_Appside_Direct.c  ReG_Steer_Appside_File.c  ReG_Steer_Appside_Globus.c  ReG_Steer_Appside_IOProxy.c  ReG_Steer_Appside_Soap.c  ReG_Steer_Appside_Sockets.c  ReG_Steer_Appside_WSRF.c  ReG_Steer_Appside_f.m4  ReG_Steer_Browser.c  ReG_Steer_Common.c  ReG_Steer_Dynamic_Loader.c  ReG_Steer_Files_Common.c  ReG_Steer_Globus_io.c  ReG_Steer_Logging.c  ReG_Steer_Proxy.java  ReG_Steer_Proxy_utils.c  ReG_Steer_Samples_Transport_Files.c  ReG_Steer_Samples_Transport_Proxy.c  ReG_Steer_Samples_Transport_Sockets.c  ReG_Steer_Samples_Transport_Sockets_Shared.c  ReG_Steer_Sockets_Common.c  ReG_Steer_Steering_Transport_Files.c  ReG_Steer_Steering_Transport_Sockets.c  ReG_Steer_Steering_Transport_WSRF.c  ReG_Steer_Steerside.c  ReG_Steer_Steerside_Direct.c  ReG_Steer_Steerside_Globus.c  (+12 more)
src/conf/: LINUX-g95.m4
src/fortran_type_utils/: CMakeLists.txt  c_types.c  max_kind.f90  sizeof_f.m4
src/gsoap_stubs/: CheckPointTree.h  CheckPointTreeNode.h  Makefile  README  RealityGridTree.h  RealityGridTreeFactory.h  SGS.h  SGSFactory.h  SWS.h  SWSFactory.h  ServiceGroupRegistration.h  all_hdrs.h  regServiceGroup.h
src/stubs/: Makefile  ReG_Steering_Initialize_stub.c
src/utils/: Makefile  c_types.c  max_kind.f90  sizeof_f.m4
src/win32/: snprintf.c
wrappers/: Makefile  Makefile.wrap  ReG_Steer_API.i
wrappers/java/: Makefile  ReG_Steer.i  gendoc
wrappers/java/examples/: IOExample.java  MiniApp.java  MiniSteerer.java  MiniSteererSecure.java  Sink.java
wrappers/java/org/realitygrid/: overview.html
wrappers/java/org/realitygrid/steering/: ReG_SWIG.java  ReG_SteerAppside.java  ReG_SteerException.java  ReG_SteerParameter.java  ReG_SteerRegistryEntry.java  ReG_SteerSecurity.java  ReG_SteerSteerside.java  ReG_SteerUtilities.java  package.html
wrappers/java/org/realitygrid/utilities/: FilenameFilter.java  IO.java
wrappers/perl/: Makefile  ReG_Steer.i
wrappers/perl/examples/: sink.pl
wrappers/python/: Makefile  ReG_Steer.i
wrappers/python/examples/: sink.py
xml_schema/: CMakeLists.txt  reg_steer_comm.xsd
